--- a/smart-pot/package.json
+++ b/smart-pot/package.json
@@ -9,10 +9,15 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "chart.js": "^4.4.0",
+    "chartjs-adapter-moment": "^1.0.1",
     "ionicons": "^7.1.0",
+    "moment": "^2.29.4",
     "querystring": "^0.2.1",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.8.2",
     "react-burger-menu": "^3.0.9",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-ionicons": "^4.2.0",
     "react-modal-hover": "^1.1.13",
