--- a/smart-pot/package.json
+++ b/smart-pot/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.1",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@testing-library/jest-dom": "^5.16.5",
@@ -19,11 +20,19 @@
     "react-burger-menu": "^3.0.9",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-flags-select": "^2.2.3",
     "react-ionicons": "^4.2.0",
     "react-modal-hover": "^1.1.13",
+    "react-notifications": "^1.7.4",
+    "react-popup": "^0.11.2",
+    "react-redux": "^8.1.2",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.5",
+    "react-timezone-select": "^2.1.2",
+    "redux": "^4.2.1",
     "sortablejs": "^1.15.0",
+    "spacetime": "^7.4.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
