Added new endpoints, added translations

--- a/smart-pot/package.json
+++ b/smart-pot/package.json
@@ -12,6 +12,10 @@
     "axios": "^1.4.0",
     "chart.js": "^4.4.0",
     "chartjs-adapter-moment": "^1.0.1",
+    "dexie": "^3.2.4",
+    "i18next": "^23.5.1",
+    "i18next-browser-languagedetector": "^7.1.0",
+    "i18next-http-backend": "^2.2.2",
     "ionicons": "^7.1.0",
     "moment": "^2.29.4",
     "querystring": "^0.2.1",
@@ -21,6 +25,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-flags-select": "^2.2.3",
+    "react-i18next": "^13.2.2",
     "react-ionicons": "^4.2.0",
     "react-modal-hover": "^1.1.13",
     "react-notifications": "^1.7.4",
