--- a/smart-pot/package.json
+++ b/smart-pot/package.json
@@ -23,6 +23,7 @@
     "react-big-calendar": "^1.8.2",
     "react-burger-menu": "^3.0.9",
     "react-chartjs-2": "^5.2.0",
+    "react-datepicker": "^4.18.0",
     "react-dom": "^18.2.0",
     "react-flags-select": "^2.2.3",
     "react-i18next": "^13.2.2",
